--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
       </div>
      
     <div class="footer">
-        Made with &hearts; by Harshit
+        Made with &hearts; by Harshit & Tinkal 
     </div>
 
         
